PLF-4784 : Fix bugs gadget - [History Login]Collapse History tab

--- a/exo-gadget-pack/gadget-pack/src/main/webapp/skin/less/loginHistory.less
+++ b/exo-gadget-pack/gadget-pack/src/main/webapp/skin/less/loginHistory.less
@@ -135,14 +135,16 @@
 			.accordion-toggle a{
 				padding: 5px 5px 5px 15px;
 			}
-			.collapsed{
+			/*.collapsed{
 				background: #f4f4f4;
-			}
+			}*/
 			.timePost{
 				color: #b5b5b5;
 			}
 			.accordion-body{
-				padding: 6px 12px;
+			 	overflow-y: auto; 
+ 				max-height: 100px;
+				/*padding: 6px 12px;*/
 				a{
 					color: #226AB4;
 				}
